<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">CocktailBar</string>

    <!-- Home Screen -->
    <string name="select_template">Vali mall</string>
    <string name="sync_data">Sünkroniseeri</string>
    <string name="admin_login">Logi sisse</string>

    <!-- Messages -->
    <string name="syncing">Sünkroniseerin...</string>
    <string name="sync_success">Sünkroniseerimine õnnestus!</string>
    <string name="sync_failed">Sünkroniseerimine ebaõnnestus</string>
    <string name="coming_soon">Tulekul!</string>

    <!-- Admin -->
    <string name="username">Kasutajanimi</string>
    <string name="password">Parool</string>
    <string name="login">Logi sisse</string>
    <string name="logout">Logi välja</string>
    <string name="login_failed">Sisselogimine ebaõnnestus</string>
    <string name="login_success">Sisselogimine õnnestus!</string>
    <string name="field_required">Väli on kohustuslik</string>

    <!-- Admin Panel -->
    <string name="drinks">Joogid</string>
    <string name="templates">Mallid</string>
    <string name="gallery">Galerii</string>
    <string name="manage_drinks">Halda jooke</string>
    <string name="manage_folders">Halda kaustu</string>
    <string name="manage_templates">Halda malle</string>
    <string name="manage_backgrounds">Halda taustapilte</string>
    <string name="manage_logos">Halda logosid</string>

    <!-- Drinks -->
    <string name="drink_name">Joogi nimi</string>
    <string name="drink_price">Hind</string>
    <string name="add_drink">Lisa jook</string>
    <string name="edit_drink">Muuda jooki</string>
    <string name="delete_drink">Kustuta jook</string>
    <string name="search">Otsi...</string>
    <string name="description">Koostisosad</string>
    <string name="currency_format">%.2f €</string>
    <string name="name_font_size">Nime fondi suurus</string>
    <string name="price_font_size">Hinna fondi suurus</string>
    <string name="description_font_size">Kirjelduse fondi suurus</string>
    <string name="name_color">Nime värv</string>
    <string name="price_color">Hinna värv</string>
    <string name="description_color">Kirjelduse värv</string>
    <string name="font_style">Font</string>
    <string name="select_font">Vali font</string>

    <!-- Variants -->
    <string name="prices">Hinnad</string>
    <string name="size_name">Suurus</string>
    <string name="add_variant">+ Lisa hind</string>
    <string name="at_least_one_price">Lisa vähemalt üks hind</string>

    <!-- Templates -->
    <string name="template_name">Malli nimi</string>
    <string name="select_background">Vali taustapilt</string>
    <string name="select_logo">Vali logo</string>
    <string name="select_drinks">Vali joogid</string>
    <string name="save">Salvesta</string>
    <string name="cancel">Tühista</string>
    <string name="delete">Kustuta</string>
    <string name="edit">Muuda</string>
    <string name="add_template">Lisa mall</string>
    <string name="edit_template">Muuda malli</string>
    <string name="delete_template">Kustuta mall</string>
    <string name="no_templates">Malle pole</string>
    <string name="tap_to_select">Vajuta valimiseks</string>
    <string name="select_drinks_count">Vali joogid (%d valitud)</string>
    <string name="select_at_least_one_drink">Vali vähemalt üks jook</string>

    <!-- Gallery -->
    <string name="backgrounds">Taustapildid</string>
    <string name="logos">Logod</string>
    <string name="add_image">Lisa pilt</string>
    <string name="delete_image">Kustuta pilt</string>
    <string name="select_image">Vali pilt</string>
    <string name="no_images">Pilte pole</string>
    <string name="upload_success">Pilt üles laetud!</string>
    <string name="upload_failed">Pildi üleslaadimine ebaõnnestus</string>

    <!-- Visual Editor -->
    <string name="hint_edit_background">Lohista ja näpista tausta muutmiseks</string>
    <string name="hint_edit_logo">Lohista logo paigutamiseks, näpista suuruse muutmiseks</string>
    <string name="hint_edit_drinks">Lohista ala liigutamiseks, lohista nurki suuruse muutmiseks</string>
    <string name="drinks_selected_count">%d jooki valitud</string>
    <string name="drinks_settings">Jookide seaded</string>
    <string name="font_size">Fondi suurus</string>
    <string name="columns">Veerud</string>
    <string name="settings">Seaded</string>
    <string name="logo">Logo</string>
    <string name="background">Taust</string>

    <!-- Template Display -->
    <string name="lock_screen">Lukusta ekraan</string>
    <string name="unlock">Ava lukustus</string>
    <string name="screen_locked">Ekraan lukustatud. Vajuta 3x avamiseks.</string>

    <!-- Folders -->
    <string name="folder_name">Kausta nimi</string>
    <string name="add_folder">Lisa kaust</string>

    <!-- General -->
    <string name="yes">Jah</string>
    <string name="no">Ei</string>
    <string name="ok">OK</string>
    <string name="error">Viga</string>
    <string name="loading">Laadimine...</string>
    <string name="no_data">Andmed puuduvad</string>
    <string name="confirm_delete">Kas oled kindel, et soovid kustutada?</string>
</resources>